doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/MRLEE/Desktop/Hangman
-d
/Users/MRLEE/Desktop/Hangman/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/MRLEE/Downloads/BlueJ 3.1.4/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/MRLEE/Desktop/Hangman/Hangman.java
<---- end of javadoc command ---->
Loading source file /Users/MRLEE/Desktop/Hangman/Hangman.java...
/Users/MRLEE/Desktop/Hangman/Hangman.java:94: error: class expected
                    if(double.TryParse(guess1, out num))
                              ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:94: error: ')' expected
                    if(double.TryParse(guess1, out num))
                                      ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:94: error: <identifier> expected
                    if(double.TryParse(guess1, out num))
                                             ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:94: error: -> expected
                    if(double.TryParse(guess1, out num))
                                                       ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:94: error: ';' expected
                    if(double.TryParse(guess1, out num))
                                                        ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:206: error: <identifier> expected
        System.exit(0);
                   ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:206: error: illegal start of type
        System.exit(0);
                    ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:210: error: class, interface, or enum expected
    public void changeDifficulty(int choice1)
           ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:215: error: class, interface, or enum expected
        }
        ^
/Users/MRLEE/Desktop/Hangman/Hangman.java:219: error: class, interface, or enum expected
        }
        ^
10 errors
